--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "axios": "^1.6.5",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
