--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-paginate": "^8.2.0",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
