--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "axios": "^1.6.5",
+    "chart.js": "^4.4.1",
     "next": "14.0.4",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-paginate": "^8.2.0",
     "zustand": "^4.4.7"
