--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.1",
     "axios": "^1.6.5",
     "chart.js": "^4.4.1",
     "next": "14.0.4",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
+    "react-icons": "^5.0.1",
     "react-paginate": "^8.2.0",
     "zustand": "^4.4.7"
   },
